--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   supabase_flutter: ^2.9.1
+  timezone: ^0.10.1
 
 dev_dependencies:
   flutter_test:
