--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
     sdk: flutter
   supabase_flutter: ^2.9.1
   timezone: ^0.10.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
