--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   supabase_flutter: ^2.9.1
   timezone: ^0.10.1
   uuid: ^4.5.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
