--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   timezone: ^0.10.1
   uuid: ^4.5.1
   image_picker: ^1.1.2
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
