--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   font_awesome_flutter: ^10.8.0
   url_launcher: ^6.3.1
+  video_player: ^2.10.0
 
 dev_dependencies:
   flutter_test:
@@ -71,8 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - lib/assets/videos/background.mp4
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
